--- a/src/registrar/templates/application_done.html
+++ b/src/registrar/templates/application_done.html
@@ -19,7 +19,7 @@ your authorizing official, and any contacts you added.</p>
         meets our naming requirements.
     </li>
 
-    <li> You can <a href="/application/{{ application_id }}"><del>check the
+    <li> You can <a href="{% url 'todo' %}"><del>check the
             status</del></a> of your request at any time.
     </li>
 
@@ -32,9 +32,9 @@ your authorizing official, and any contacts you added.</p>
 <p>Before your domain can be used we'll need information about your
 domain name servers. If you have this information you can enter it now.
 If you don't have it, that's okay. You can enter it later on the
-<a href="/domains"><del>manage your domains page</del></a>.
+<a href="{% url 'todo' %}"><del>manage your domains page</del></a>.
 </p>
 
-<p><a href="/application/{{ application_id }}#nameservers" class="usa-button">Enter DNS name servers</a></p>
+<p><a href="{% url 'todo' %}" class="usa-button">Enter DNS name servers</a></p>
 
 {% endblock %}
