--- a/src/registrar/templates/application_org_election.html
+++ b/src/registrar/templates/application_org_election.html
@@ -5,14 +5,13 @@
 
 {% block form_content %}
 
-<form id="step__{{wizard.steps.current}}" class="usa-form usa-form--large" method="post">
-  {{ wizard.management_form }}
+<form id="step__{{steps.current}}" class="usa-form usa-form--large" method="post">
   {% csrf_token %}
   <fieldset id="election_board__fieldset" class="usa-fieldset">
     <legend>
       <h2 class="margin-bottom-05">Is your organization an election office?</h2>
     </legend>
-    {% radio_buttons_by_value wizard.form.is_election_board as choices %}
+    {% radio_buttons_by_value forms.0.is_election_board as choices %}
     {% for choice in choices.values %}
       {% include "includes/radio_button.html" with choice=choice tile="true" %}
     {% endfor %}
