--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -44,7 +44,7 @@
 </table>
 {% endif %}
 
-<p><a href="{% url 'application' %}" class="usa-button">Apply</a></p>
+<p><a href="{% url 'application:' %}" class="usa-button">Apply</a></p>
 
 <p><a href="{% url 'edit-profile' %}">Edit profile</a></p>
 
