--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -94,7 +94,7 @@
             >
           </li>
           <li class="usa-identifier__required-links-item">
-            <a href="TODO" class="usa-identifier__required-link usa-link"
+            <a href="{% url 'todo' %}" class="usa-identifier__required-link usa-link"
               >Vulnerability disclosure policy</a
             >
           </li>
