--- a/src/registrar/templates/application_authorizing_official.html
+++ b/src/registrar/templates/application_authorizing_official.html
@@ -8,7 +8,7 @@
 <h2>Who is the authorizing official for your organization?</h2>
 
 <div id="instructions">
-  <p>Your authorizing official is the person within your organization who can authorize your domain request. This is generally the highest ranking or highest elected official in your organization. Read more about <a href="#">who can serve as an authorizing official</a>.
+  <p>Your authorizing official is the person within your organization who can authorize your domain request. This is generally the highest ranking or highest elected official in your organization. Read more about <a href="{% url 'todo' %}">who can serve as an authorizing official</a>.
   </p>
 
   <div class="ao-example">
@@ -20,31 +20,30 @@
 
 <p>All fields are required unless they are marked optional.</p>
 
-<form class="usa-form usa-form--large" id="step__{{wizard.steps.current}}" method="post">
-  {{ wizard.management_form }}
+<form class="usa-form usa-form--large" id="step__{{steps.current}}" method="post">
   {% csrf_token %}
 
   <fieldset class="usa-fieldset">
     <legend class="usa-sr-only">
       Who is the authorizing official for your organization?
     </legend>
-    {{ wizard.form.first_name|add_label_class:"usa-label" }}
-    {{ wizard.form.first_name|add_class:"usa-input"}}
+    {{ forms.0.first_name|add_label_class:"usa-label" }}
+    {{ forms.0.first_name|add_class:"usa-input"}}
 
-    {{ wizard.form.middle_name|add_label_class:"usa-label" }}
-    {{ wizard.form.middle_name|add_class:"usa-input"}}
+    {{ forms.0.middle_name|add_label_class:"usa-label" }}
+    {{ forms.0.middle_name|add_class:"usa-input"}}
 
-    {{ wizard.form.last_name|add_label_class:"usa-label" }}
-    {{ wizard.form.last_name|add_class:"usa-input"}}
+    {{ forms.0.last_name|add_label_class:"usa-label" }}
+    {{ forms.0.last_name|add_class:"usa-input"}}
     
-    {{ wizard.form.title|add_label_class:"usa-label" }}
-    {{ wizard.form.title|add_class:"usa-input"}}
+    {{ forms.0.title|add_label_class:"usa-label" }}
+    {{ forms.0.title|add_class:"usa-input"}}
 
-    {{ wizard.form.email|add_label_class:"usa-label" }}
-    {{ wizard.form.email|add_class:"usa-input"}}
+    {{ forms.0.email|add_label_class:"usa-label" }}
+    {{ forms.0.email|add_class:"usa-input"}}
 
-    {{ wizard.form.phone|add_label_class:"usa-label" }}
-    {{ wizard.form.phone|add_class:"usa-input usa-input--medium" }}
+    {{ forms.0.phone|add_label_class:"usa-label" }}
+    {{ forms.0.phone|add_class:"usa-input usa-input--medium" }}
   </fieldset>
 
 
