--- a/src/registrar/templates/application_review.html
+++ b/src/registrar/templates/application_review.html
@@ -1,44 +1,43 @@
 <!-- Test page -->
 {% extends 'application_form.html' %}
-{% load static widget_tweaks %}
+{% load static widget_tweaks namespaced_urls %}
 
 {% block form_content %}
 
-<form id="step__{{wizard.steps.current}}" class="usa-form usa-form--large" method="post">
-  {{ wizard.management_form }}
+<form id="step__{{steps.current}}" class="usa-form usa-form--large" method="post">
   {% csrf_token %}
 
-  {% for step in wizard.steps.all|slice:":-1" %}
+  {% for step in steps.all|slice:":-1" %}
   <section class="review__step margin-top-205">
     <hr />
     <div class="review__step__title display-flex flex-justify"> 
       <div class="review__step__value">
         <div class="review__step__name">{{ form_titles|get_item:step }}</div>
         <div>
-          {% if step == step_cls.ORGANIZATION_TYPE %}
+          {% if step == Step.ORGANIZATION_TYPE %}
             {{ application.get_organization_type_display|default:"Incomplete" }}
           {% endif %}
-          {% if step == step_cls.ORGANIZATION_FEDERAL %}
+          {% if step == Step.ORGANIZATION_FEDERAL %}
             {{ application.get_federal_type_display|default:"Incomplete" }}
           {% endif %}
-          {% if step == step_cls.ORGANIZATION_ELECTION %}
+          {% if step == Step.ORGANIZATION_ELECTION %}
             {{ application.is_election_board|yesno:"Yes,No,Incomplete" }}
           {% endif %}
-          {% if step == step_cls.ORGANIZATION_CONTACT %}
+          {% if step == Step.ORGANIZATION_CONTACT %}
             {% if application.organization_name %}
               {% include "includes/organization_address.html" with organization=application %}
             {% else %}
               Incomplete
             {% endif %}
           {% endif %}
-          {% if step == step_cls.AUTHORIZING_OFFICIAL %}
+          {% if step == Step.AUTHORIZING_OFFICIAL %}
             {% if application.authorizing_official %}
               {% include "includes/contact.html" with contact=application.authorizing_official %}
             {% else %}
               Incomplete
             {% endif %}
           {% endif %}
-          {% if step == step_cls.CURRENT_SITES %}
+          {% if step == Step.CURRENT_SITES %}
             <ul class="add-list-reset">
               {% for site in application.current_websites.all %}
                 <li>{{ site.website }}</li>
@@ -47,7 +46,7 @@
               {% endfor %}
             </ul>
           {% endif %}
-          {% if step == step_cls.DOTGOV_DOMAIN %}
+          {% if step == Step.DOTGOV_DOMAIN %}
             <ul class="add-list-reset">
               <li>{{ application.requested_domain.name|default:"Incomplete" }}</li>
               {% for site in application.alternative_domains.all %}
@@ -55,37 +54,37 @@
               {% endfor %}
             </ul>
           {% endif %}
-          {% if step == step_cls.PURPOSE %}
+          {% if step == Step.PURPOSE %}
             {{ application.purpose|default:"Incomplete" }}
           {% endif %}
-          {% if step == step_cls.YOUR_CONTACT %}
+          {% if step == Step.YOUR_CONTACT %}
               {% if application.submitter %}
                 {% include "includes/contact.html" with contact=application.submitter %}
               {% else %}
                 Incomplete
               {% endif %}
           {% endif %}
-          {% if step == step_cls.OTHER_CONTACTS %}
+          {% if step == Step.OTHER_CONTACTS %}
             {% for other in application.other_contacts.all %}
                 {% include "includes/contact.html" with contact=other %}
             {% empty %}
               None
             {% endfor %}
           {% endif %}
-          {% if step == step_cls.SECURITY_EMAIL %}
+          {% if step == Step.SECURITY_EMAIL %}
             {{ application.security_email|default:"None" }}
           {% endif %}
-          {% if step == step_cls.ANYTHING_ELSE %}
+          {% if step == Step.ANYTHING_ELSE %}
             {{ application.anything_else|default:"No" }}
           {% endif %}
-          {% if step == step_cls.REQUIREMENTS %}
+          {% if step == Step.REQUIREMENTS %}
             {{ application.is_policy_acknowledged|yesno:"Agree,Do not agree,Do not agree" }}
           {% endif %}
         </div>
       </div>
       <a
         aria-describedby="review_step_title__{{step}}"
-        href="{% url wizard.url_name step=step %}"
+        href="{% namespaced_url 'application' step %}"
       >Edit<span class="sr-only"> {{ form_titles|get_item:step }}</span></a>
     </div>
   </section>
