--- a/src/registrar/templates/application_sidebar.html
+++ b/src/registrar/templates/application_sidebar.html
@@ -1,12 +1,13 @@
-{% load static %}
+{% load static namespaced_urls %}
+
 <div class="margin-bottom-4 tablet:margin-bottom-0">
   <nav aria-label="Form steps,">
     <ul class="usa-sidenav">
-    {% for this_step in wizard.steps.all %}
+    {% for this_step in steps.all %}
       {% if this_step in visited %}
       <li class="usa-sidenav__item">
-        <a href="{% url wizard.url_name step=this_step %}" 
-           {% if this_step == wizard.steps.current %}class="usa-current"{% endif%}>
+        <a href="{% namespaced_url 'application' this_step %}" 
+           {% if this_step == steps.current %}class="usa-current"{% endif%}>
           {{ form_titles|get_item:this_step }}
         </a>
       {% else %}
