--- a/src/registrar/templates/includes/input_with_errors.html
+++ b/src/registrar/templates/includes/input_with_errors.html
@@ -13,7 +13,7 @@ error messages, if necessary.
       {{ error }}
     </span>
   {% endfor %}
-  {{ field|add_class:input_class|add_class:"usa-input--error"}}
+  {{ field|add_class:input_class|add_class:"usa-input--error"|attr:"aria-invalid:true" }}
   </div>
 {% else %}
   {{ field|add_label_class:"usa-label" }}
