--- a/src/registrar/templates/application_your_contact.html
+++ b/src/registrar/templates/application_your_contact.html
@@ -14,9 +14,9 @@
   <p>The contact information you provide here won’t be public and will only be used for the .gov registry.</p>
 <div>
 
-<p>All fields are required unless they are marked optional.</p>
+{% include "includes/required_fields.html" %}
 
-<form class="usa-form usa-form--large" id="step__{{wizard.steps.current}}" method="post">
+<form class="usa-form usa-form--large" id="step__{{wizard.steps.current}}" method="post" novalidate>
   {{ wizard.management_form }}
   {% csrf_token %}
 
