--- a/src/registrar/templates/application_org_election.html
+++ b/src/registrar/templates/application_org_election.html
@@ -5,16 +5,17 @@
 
 {% block form_content %}
 
-<form id="step__{{wizard.steps.current}}" class="usa-form usa-form--large" method="post">
+<form id="step__{{wizard.steps.current}}" class="usa-form usa-form--large" method="post" novalidate>
   {{ wizard.management_form }}
   {% csrf_token %}
   <fieldset id="election_board__fieldset" class="usa-fieldset">
     <legend>
       <h2 class="margin-bottom-05">Is your organization an election office?</h2>
+      <p> This question is required.</p>
     </legend>
     {% radio_buttons_by_value wizard.form.is_election_board as choices %}
     {% for choice in choices.values %}
-      {% include "includes/radio_button.html" with choice=choice tile="true" %}
+      {% include "includes/radio_button.html" with choice=choice tile="true" required="true"%}
     {% endfor %}
   </fieldset>
 
