--- a/src/registrar/templates/application_requirements.html
+++ b/src/registrar/templates/application_requirements.html
@@ -127,6 +127,8 @@
 
 <h2>Acknowledgement of .gov domain requirements</h2>
 
+<p>This question is required.</p>
+
 <form id="step__{{wizard.steps.current}}" class="usa-form usa-form--large" method="post" novalidate>
   <div class="usa-form-group">
     {{ wizard.management_form }}
