--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -21,16 +21,16 @@
     {% include "includes/domain_example__city.html" %}
   </div>
 
-<form id="step__{{wizard.steps.current}}" class="usa-form usa-form--large" method="post">
+<form id="step__{{wizard.steps.current}}" class="usa-form usa-form--large" method="post" novalidate>
   <h2> What .gov domain do you want? </h2>
   <p class="domain_instructions"> After you enter your domain, we’ll make sure it’s available and that it meets some of our naming requirements. If your domain passes these initial checks, we’ll verify that it meets all of our requirements once you complete and submit the rest of this form. </p>
 
+  <p> This question is required. </p>
   {{ wizard.management_form }}
   {% csrf_token %}
 
   {% if wizard.form.requested_domain.errors %}
     <div class="usa-form-group usa-form-group--error">
-      {{ wizard.form.requested_domain|add_label_class:"usa-label usa-label--error" }}
       {% for error in wizard.form.requested_domain.errors %}
         <span class="usa-error-message" id="input-error-message" role="alert">
           {{ error }}
@@ -43,7 +43,6 @@
       </div>
     </div>
   {% else %}
-    {{ wizard.form.requested_domain|add_label_class:"usa-label" }}
     <div class="display-flex flex-align-center">
       <span class="padding-top-05 padding-right-2px">www.</span>
         {{ wizard.form.requested_domain|add_class:"usa-input"|attr:"aria-describedby:domain_instructions" }}
