--- a/src/registrar/templates/application_purpose.html
+++ b/src/registrar/templates/application_purpose.html
@@ -8,14 +8,30 @@
 
 <p id="instructions">Describe the reason for your domain request. Explain how you plan to use this domain. Will you use it for a website and/or email? Are you moving your website from another top-level domain (like .com or .org)? Read about <a href="#">activities that are prohibited on .gov domains.</a></p>
 
+<p> This question is required. </p>
+
 <form id="step__{{wizard.steps.current}}" class="usa-form usa-form--large" method="post" novalidate>
   <div class="usa-form-group">
     {{ wizard.management_form }}
     {% csrf_token %}
 
     <div class="usa-character-count">
-      {{ wizard.form.purpose|add_label_class:"usa-label usa-sr-only" }}
-      {{ wizard.form.purpose|add_class:"usa-textarea usa-character-count__field"|attr:"aria-describedby:instructions"|attr:"maxlength=500" }}
+      {% with field=wizard.form.purpose %}
+      {% if field.errors %}
+        <div class="usa-form-group usa-form-group--error">
+          {{ field|add_label_class:"usa-label usa-label--error usa-sr-only" }}
+          {% for error in field.errors %}
+            <span class="usa-error-message" id="input-error-message" role="alert">
+              {{ error }}
+            </span>
+          {% endfor %}
+          {{ field|add_class:"usa-input--error usa-textarea usa-character-count__field"|attr:"aria-describedby:instructions"|attr:"maxlength=500"|attr:"aria-invalid:true" }}
+        </div>
+      {% else %}
+        {{ field|add_label_class:"usa-label usa-sr-only" }}
+        {{ field|add_class:"usa-textarea usa-character-count__field"|attr:"aria-describedby:instructions"|attr:"maxlength=500" }}
+      {% endif %}
+      {% endwith %}
       <span class="usa-character-count__message" id="with-hint-textarea-info with-hint-textarea-hint"> You can enter up to 500 characters </span>
     </div>
   </div>
