--- a/src/registrar/templates/application_current_sites.html
+++ b/src/registrar/templates/application_current_sites.html
@@ -8,7 +8,7 @@
 <form class="usa-form usa-form--large" id="step__{{steps.current}}" method="post">
   {% csrf_token %}
 
-  {% input_with_errors forms.0.form.current_site %}
+  {% input_with_errors forms.0.current_site %}
 
   {{ block.super }}
 
