--- a/src/registrar/templates/application_other_contacts.html
+++ b/src/registrar/templates/application_other_contacts.html
@@ -1,4 +1,3 @@
-<!-- Test page -->
 {% extends 'application_form.html' %}
 {% load widget_tweaks %}
 {% load static %}
@@ -11,28 +10,25 @@
 
 <form class="usa-form usa-form--large" id="step__{{steps.current}}" method="post" novalidate>
   {% csrf_token %}
-
-  <fieldset class="usa-fieldset">
-    <legend>
-      <h2 class="margin-bottom-05"> Contact 2 </h2>
-    </legend>
-    {% input_with_errors forms.0.first_name %}
-
-    {% input_with_errors forms.0.middle_name %}
-
-    {% input_with_errors forms.0.last_name %}
-
-    {% input_with_errors forms.0.title %}
-
-    {% input_with_errors forms.0.email %}
-
-    {% input_with_errors forms.0.phone add_class="usa-input--medium" %}
-  </fieldset>
+  {{ forms.0.management_form }}
+  {% for form in forms.0.forms %}
+    <fieldset class="usa-fieldset">
+      <legend>
+        <h2 class="margin-bottom-05">Contact {{ forloop.counter }}</h2>
+      </legend>
+      {% input_with_errors form.first_name %}
+      {% input_with_errors form.middle_name %}
+      {% input_with_errors form.last_name %}
+      {% input_with_errors form.title %}
+      {% input_with_errors form.email %}
+      {% input_with_errors form.phone add_class="usa-input--medium" %}
+    </fieldset>
+  {% endfor %}
 
   <div>
-    <button type="button" class="usa-button usa-button--unstyled">
+    <button type="submit" name="submit_button" value="save" class="usa-button usa-button--unstyled">
       <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
-        <use xlink:href="{%static '/img/sprite.svg'%}#add_circle"></use>
+        <use xlink:href="{%static 'img/sprite.svg'%}#add_circle"></use>
       </svg><span class="margin-left-05">Add another contact</span>
     </button>
   </div>
